# Curve_ai_backend

./: README.md  alembic.ini  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: e7f487d126e9_create_tables.py
src/apy/: __init__.py  api.py  apy_calc.py  auth.py  blockchain.py  config.py  curve.py  database.py  onchain.py  services.py  tasks.py  worker.py
src/apy/ai/: model.py  train.py
src/apy/models/: user.py
tests/: conftest.py  test_api.py  test_apy_calc.py  test_auth.py
